--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><a class="fa fa-gamepad" data-index="4">&nbsp;Entrenimiento</a></li>-->
                 <li><a class="fa fa-user" data-index="2" data-lb="true">&nbsp;Author</a></li>
                 <li>
-                    <a href="http://www.w3.org/html/logo/">
+                    <a href="javascript:void(0);">
                         <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
                     </a>
                 </li>
