--- a/index.html
+++ b/index.html
@@ -42,16 +42,12 @@
                 { src: 'controllers/controller-main.js' }
             ], function () {
                 myApp.main.fnInit();
-
-                // Inicio Analytics
-                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-                ga('create', 'UA-47762731-1', 'jerc91.github.io');
-                ga('send', 'pageview');
-                // Fin Analytics
             });
         });  // fin método
-        //----------------------------------------------</script></body></html>
+        //----------------------------------------------</script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-47762731-1', 'auto');
+        ga('send', 'pageview');</script></body></html>
