--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
         */
         fnInitJMain(function () {
             // Espacio de nombres para la compañia
-            window.myApp = new Assembly();
-            fnGetFile([
+            window.myApp = new NameSpace();
+            fnGetFile.call(myApp, [
                 { src: 'assets/js/jtools.js' },
                 { src: 'controllers/controller-main.js' }
             ], function () {
                 myApp.main.fnInit();
-            });
+                fnDeleteWorkers(myApp.workers);
+            }); // end function
         });  // fin método
         //----------------------------------------------</script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
